@startuml

title __ITALIANCALENDAR's Class Diagram__\n

  namespace com.woonders.lacemsjsf.ui {
    namespace component.italiancalendar {
      class com.woonders.lacemsjsf.ui.component.italiancalendar.ItalianCalendar {
          {static} + COMPONENT_FAMILY : String
          {static} + COMPONENT_TYPE : String
          + ItalianCalendar()
          + getFamily()
          + getRendererType()
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.ui {
    namespace component.italiancalendar {
      class com.woonders.lacemsjsf.ui.component.italiancalendar.ItalianCalendarRenderer {
          {static} + RENDERER_TYPE : String
      }
    }
  }
  

  com.woonders.lacemsjsf.ui.component.italiancalendar.ItalianCalendar -up-|> org.primefaces.component.calendar.Calendar
  com.woonders.lacemsjsf.ui.component.italiancalendar.ItalianCalendarRenderer -up-|> org.primefaces.component.calendar.CalendarRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
